@@ -93,7 +93,12 @@ AC_ARG_ENABLE(socket-dir,
 	AC_MSG_RESULT(yes)
 	AC_MSG_CHECKING(for the socket dir)
 	SOCKDIR="(eff_uid ? \"/tmp/uscreens\" : \"/tmp/screens\")"
-	AC_ARG_WITH(socket-dir, [  --with-socket-dir=path  where to put the per-user sockets], [ SOCKDIR="\"${withval}\"" ])
+	AC_ARG_WITH(socket-dir, [  --with-socket-dir=path  where to put the per-user sockets], [ 
+	  case "${withval}" in
+	    *\"*) SOCKDIR="${withval}" ;;
+	    *) SOCKDIR="\"${withval}\"" ;;
+	  esac
+        ])
 	AC_MSG_RESULT(${SOCKDIR})
 	AC_DEFINE_UNQUOTED(SOCKDIR, $SOCKDIR)
     ]
@@ -206,7 +211,7 @@ AC_TRY_LINK([#include <utmpx.h>
 
 AC_CHECKING(for Solaris 2.x)
 AC_EGREP_CPP(yes,
-[#if defined(__SVR4) && defined(__sun)
+[#if defined(SVR4) && defined(sun)
   yes
 #endif
 ], LIBS="$LIBS -lsocket -lnsl -lkstat")
@@ -252,16 +257,16 @@ int y = TIOCNOTTY;
 ], AC_NOTE(- you have jobcontrol) AC_DEFINE(BSDJOBS), AC_NOTE(- you don't have jobcontrol))
 
 dnl
-dnl    ****  setreuid(), seteuid()  ****
+dnl    ****  setresuid(), setreuid(), seteuid()  ****
 dnl
+AC_CHECKING(setresuid)
+AC_TRY_LINK(,[
+setresuid(0, 0, 0);
+], AC_DEFINE(HAVE_SETRESUID))
 AC_CHECKING(setreuid)
 AC_TRY_LINK(,[
-#ifdef __hpux
-setresuid(0, 0, 0);
-#else
 setreuid(0, 0);
-#endif
-], AC_DEFINE(HAVE_SETREUID))
+], AC_DEFINE(HAVE_SETRESUID))
 dnl
 dnl seteuid() check:
 dnl   linux seteuid was broken before V1.1.11
@@ -270,7 +275,7 @@ dnl   Solaris seteuid doesn't change the saved uid, bad for
 dnl     multiuser screen sessions
 AC_CHECKING(seteuid)
 AC_TRY_LINK(,[
-#if defined(linux) || defined(NeXT) || defined(_AUX_SOURCE) || defined(AUX) || defined(ultrix) || (defined(__sun) && defined(__SVR4)) || defined(ISC) || defined(sony_news)
+#if defined(linux) || defined(NeXT) || defined(_AUX_SOURCE) || defined(AUX) || defined(ultrix) || (defined(sun) && defined(SVR4)) || defined(ISC) || defined(sony_news)
 seteuid_is_broken(0);
 #else
 seteuid(0);
@@ -518,8 +523,7 @@ if test -n "$fifo"; then
     elif test -n "$fifobr"; then
       AC_NOTE(- as your fifos are broken lets use the sockets.)
     else
-      AC_NOTE(- both sockets and fifos usable. let's take fifos.)
-      AC_DEFINE(NAMEDPIPE)
+      AC_NOTE(- both sockets and fifos usable. let's take sockets.)
     fi
   else
     AC_NOTE(- using named pipes, of course)
@@ -815,7 +819,7 @@ AC_CHECKING(getutent)
 AC_TRY_LINK([
 #include <time.h> /* to get time_t on SCO */
 #include <sys/types.h>
-#if defined(__SVR4) && !defined(DGUX)
+#if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
 #else
@@ -832,7 +836,7 @@ AC_CHECKING(getutent with -lgen)
 AC_TRY_LINK([
 #include <time.h>
 #include <sys/types.h>
-#if defined(__SVR4) && !defined(DGUX)
+#if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
 #else
@@ -848,7 +852,7 @@ AC_CHECKING(ut_host)
 AC_TRY_COMPILE([
 #include <time.h>
 #include <sys/types.h>
-#if defined(__SVR4) && !defined(DGUX)
+#if defined(SVR4) && !defined(DGUX)
 #include <utmpx.h>
 #define utmp utmpx
 #else
@@ -979,7 +983,7 @@ AC_PROGRAM_SOURCE([
 #include <sys/types.h>
 #include <sys/param.h>
 ],[
-#if !defined(LOADAV_GETLOADAVG) && ((defined(hp300) && !defined(__hpux)) || defined(__sun) || (defined(ultrix) && defined(mips)) || defined(_SEQUENT_) || defined(sgi) || (defined(__SVR4) && !defined(__hpux)) || defined(sony_news) || (!defined(__osf__) && defined(__alpha)) || defined(_IBMR2) || defined(_AUX_SOURCE) || defined(AUX) || defined(m88k))
+#if !defined(LOADAV_GETLOADAVG) && ((defined(hp300) && !defined(__hpux)) || defined(sun) || (defined(ultrix) && defined(mips)) || defined(_SEQUENT_) || defined(sgi) || (defined(SVR4) && !defined(__hpux)) || defined(sony_news) || (!defined(__osf__) && defined(__alpha)) || defined(_IBMR2) || defined(_AUX_SOURCE) || defined(AUX) || defined(m88k))
 loadtype=long
 # if defined(apollo) || defined(_IBMR2) || defined(_AUX_SOURCE) || defined(AUX)
 loadscale=65536
@@ -992,7 +996,7 @@ loadscale=FSCALE
 loadtype=int
 loadscale=1024
 #   else
-#    if defined(MIPS) || defined(__SVR4) || defined(m88k)
+#    if defined(MIPS) || defined(SVR4) || defined(m88k)
 loadscale=256
 #    else /* not MIPS */
 loadscale=1000 	/* our default value */
